Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.9.0
-
None
-
-
c322bc548 (130-based), 99f7010b6 (122-based)
-
Windows
Description
Windows 11, Visual Studio 2022
Can't build webengine from sources. Build log is attached. Config bat is also attached.
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/websockets/websocket_frame.cc(41): error C2370: 'net::`anonymous-namespace'::kFinalBit': redefinition; different storage class
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/server/web_socket_encoder.cc(39): note: see declaration of 'net::`anonymous-namespace'::kFinalBit'
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/websockets/websocket_frame.cc(42): error C2370: 'net::`anonymous-namespace'::kReserved1Bit': redefinition; different storage class
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/server/web_socket_encoder.cc(40): note: see declaration of 'net::`anonymous-namespace'::kReserved1Bit'
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/websockets/websocket_frame.cc(43): error C2370: 'net::`anonymous-namespace'::kReserved2Bit': redefinition; different storage class
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/server/web_socket_encoder.cc(41): note: see declaration of 'net::`anonymous-namespace'::kReserved2Bit'
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/websockets/websocket_frame.cc(44): error C2370: 'net::`anonymous-namespace'::kReserved3Bit': redefinition; different storage class
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/server/web_socket_encoder.cc(42): note: see declaration of 'net::`anonymous-namespace'::kReserved3Bit'
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/websockets/websocket_frame.cc(45): error C2370: 'net::`anonymous-namespace'::kOpCodeMask': redefinition; different storage class
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/server/web_socket_encoder.cc(43): note: see declaration of 'net::`anonymous-namespace'::kOpCodeMask'
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/websockets/websocket_frame.cc(46): error C2370: 'net::`anonymous-namespace'::kMaskBit': redefinition; different storage class
C:\WebEngine6.9.0\src\core\RelWithDebInfo\AMD64\../../../../../Qt6.9.0Sources/6.9.0/Src/qtwebengine/src/3rdparty/chromium/net/server/web_socket_encoder.cc(44): note: see declaration of 'net::`anonymous-namespace'::kMaskBit'