[fixup] Fixes for jumbo build

Fixes: QTBUG-137024
Change-Id: I81494fbc828b10c21486168bfebf69580e5cbf44
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/646877
Reviewed-by: Kaloyan Chehlarski <kaloyan.chehlarski@qt.io>
Reviewed-by: Michael Brüning <michael.bruning@qt.io>
(cherry picked from commit c322bc548a5d6a4caeaa214d4296223d0b8a73f2)
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/647100